@@ -1,7 +1,7 @@
 /****************************************************************************
  * c5471/c5471_serial.c
  *
- *   Copyright (C) 2007-2009, 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009, 2012-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -620,6 +620,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
 
   switch (cmd)
     {
+#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
     case TIOCSERGSTRUCT:
       {
          struct up_dev_s *user = (struct up_dev_s*)arg;
@@ -633,6 +634,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
            }
        }
        break;
+#endif
 
     case TIOCSBRK:  /* BSD compatibility: Turn break on, unconditionally */
       {
