@@ -2,7 +2,7 @@
  * arch/arm/src/imx/imx_serial.c
  * arch/arm/src/chip/imx_serial.c
  *
- *   Copyright (C) 2009, 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2009, 2012-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -885,6 +885,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
 
   switch (cmd)
     {
+#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
     case TIOCSERGSTRUCT:
       {
          struct up_dev_s *user = (struct up_dev_s*)arg;
@@ -898,6 +899,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
            }
        }
        break;
+#endif
 
     case TIOCSBRK:  /* BSD compatibility: Turn break on, unconditionally */
     case TIOCCBRK:  /* BSD compatibility: Turn break off, unconditionally */
