@@ -1621,6 +1621,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
 
   switch (cmd)
     {
+#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
     case TIOCSERGSTRUCT:
       {
         struct up_dev_s *user = (struct up_dev_s*)arg;
@@ -1634,6 +1635,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
           }
       }
       break;
+#endif
 
 #ifdef CONFIG_STM32_USART_SINGLEWIRE
     case TIOCSSINGLEWIRE:
